# LearnPython

./: .gitignore
EmbedPython/: CMakeLists.txt  hello.py  main.c
HelloDjango/HelloDjango/: settings.py
Lambda/: main.py
LearnML/01/: main.py  readme.md
LearnML/02/: light.py  main.py
LearnML/RecognizeNumber/: __main__.py  data_arr.json  ml.py
LearnML/RecognizeNumber/HWRecognize/: __main__.py  index.html  ml.py
LearnML/RecognizeNumber/LoadHW/: index.html  main.js  package-lock.json  renderer.js
LearnML/RecognizeNumber/static/: index.html  main.js
LearnML/RecognizeNumber/static/LoadHW/: data_arr.json  index.html  index.js  target_arr.json
LearnML/RecognizeNumber/static/LoadHW/hw/: hw.fla
MatplotlibAnim/: main.py
NumpyRand/: main.py
RPiI2C1602Lcd/: README.md  app.py
RPiLED/: app.py
RPiRGBLED/: app.py
RPi_buzzer/: app.py
RPi_i2c_1602_lcd_count/: app.py
RPi_i2c_1602_lcd_with_humiture/: app.py
RaspberrySPILedMatrix8x8/: README.md  app.py  char_lib.py
RpiHumiture/: app.py
SimplePlot/: main.py
SimpleWindow/: main.py
TkinterCanvas/: main.py
TkinterLabel/: main.py
Webpy/: __main__.py
